# associative_search

./: README.md  WikiExtractor.py  article_searcher.py  condensed_article_searcher.py  homophone_list.txt  index_merger.py  index_searcher.py
searcher/: Cargo.toml
searcher/src/: indexer.rs  lib.rs  main.rs  stemmer.rs  synonym_index.rs
static/: index.html
static/css/: main.css
static/js/: app.js
