[package]
name = "searcher"
version = "0.1.0"
authors = ["Ramen Deer <ramendeer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simd-json = "0.2.5"
serde_json = "1.0.48"
regex = "1.3.4"
fst = "0.4.0"
lazy_static = "1.4.0"
memmap = "0.7.0"
